chore: Remove internal documentation from repository
- Add internal docs patterns to .gitignore
- Remove tracked personal and internal documentation files
- Keep files locally but exclude from version control

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,14 @@ FIXES_SUMMARY.md
 RESEARCH.md
 COMPARISON.md
 CLAUDE.md
+KLIBS_IO_INFO.md
+MAVEN_CENTRAL_SETUP.md
+PUBLISH_SUMMARY.md
+RELEASE_v*_NOTES.md
+*_NOTES.md
+NOTES.md
+TODO.md
+PERSONAL_*.md
 
 # Deployment bundles
 *-bundle.zip
