docs: Update roadmap versions and improve gitignore
- Updated roadmap versions to reflect v2.0.0 as current release
  - v1.2.0 → v2.1.0 (Event Persistence & Smart Retries)
  - v1.3.0 → v2.2.0 (Typed Results & Enhanced Observability)
  - v1.4.0 → v2.3.0 (Developer Experience & Tooling)
  - v2.0.0 → v3.0.0 (Advanced Features & Platform Expansion)

- Added docs/ internal files to .gitignore
  - ROADMAP_*.md (version-specific roadmaps)
  - TEST_PLAN.md (internal test documentation)
  - EVENT_PERSISTENCE_DESIGN.md (design notes)
  - RESEARCH_ANALYSIS.md (research notes)

These internal documentation files are not intended for public release.

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,12 @@ NOTES.md
 TODO.md
 PERSONAL_*.md
 
+# Internal docs/ files (uppercase filenames)
+docs/ROADMAP_*.md
+docs/TEST_PLAN.md
+docs/EVENT_PERSISTENCE_DESIGN.md
+docs/RESEARCH_ANALYSIS.md
+
 # Deployment bundles
 *-bundle.zip
 *.bundle.zip
