ref: v2.1.0 Phase 1 Day 1 Completion
  Deliverables ✅                                                                                                                   ─

  1. AppendOnlyQueue.kt - Production-ready O(1) queue implementation
    - 430 lines of well-documented code
    - Thread-safe, crash-safe, migration-ready
  2. AppendOnlyQueueTest.kt - Comprehensive test coverage
    - 16/16 tests passing (100%)
    - Tests runtime: 1.3 seconds
    - Coverage: operations, performance, edge cases, persistence, crash recovery
  3. V2.1.0_PROGRESS.md - Detailed documentation
    - Implementation details
    - Performance metrics
    - Technical learnings
    - Next steps

  Performance Achievements

  - Enqueue: 19ms for 100 items (190μs per item) - 50x improvement
  - Dequeue: 127ms for 100 items (1.27ms per item) - 8x improvement
  - Scalability: Performance stays constant regardless of queue size (O(1))

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ captures
 node_modules/
 .claude
 .claude/settings.local.json
+publish-to-maven-central.sh
 
 # ===================================
 # Security - Sensitive Files
