fix: Add exact-reminder to iOS Info.plist BGTaskSchedulerPermittedIdentifiers
The exact-reminder task ID is used in demo app (Alarms tab) but was missing
from the permitted identifiers list, causing task validation to fail.

Changes:
- Added 'exact-reminder' to BGTaskSchedulerPermittedIdentifiers array

Fixes iOS simulator warning:
❌ [TaskScheduler] Task ID 'exact-reminder' not in Info.plist

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -9,6 +9,7 @@
 		<string>heavy-task-1</string>
 		<string>periodic-sync-task</string>
 		<string>network-task</string>
+		<string>exact-reminder</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
