fix: Replace dynamic task ID with fixed ID for iOS compatibility
iOS BGTaskScheduler requires all task IDs to be declared in Info.plist.
Dynamic IDs with timestamps are not supported.

Changes:
- Changed 'demo-task-$timestamp' to fixed 'demo-task' ID
- Added 'demo-task' to BGTaskSchedulerPermittedIdentifiers
- Updated button label to clarify iOS uses fixed ID

This fixes iOS task validation error:
❌ Task ID 'demo-task-1768845431861' not in Info.plist

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -10,6 +10,7 @@
 		<string>periodic-sync-task</string>
 		<string>network-task</string>
 		<string>exact-reminder</string>
+		<string>demo-task</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
