fix: Critical fixes for v2.1.0 production release
Fixed 7 critical race conditions, memory leaks, and platform bugs:

iOS Fixes:
- Fix race condition in queue compaction (added compactionMutex)
- Fix continuation crash in task scheduling (use suspendCancellableCoroutine)
- Fix cache corruption during compaction (proper invalidation timing)
- Fix NSFileHandle resource leaks (guaranteed cleanup)
- Fix memory leak in event emission (reuse coroutineScope)
- Fix NSFileCoordinator incorrect usage (pass actualURL to block)

Android Fixes:
- Fix Android 14+ crash (add FOREGROUND_SERVICE_TYPE_DATA_SYNC)

All fixes verified with 236/236 tests passing.

See CRITICAL_FIXES_v2.1.0.md for details.

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@ docs/ROADMAP_*.md
 docs/TEST_PLAN.md
 docs/EVENT_PERSISTENCE_DESIGN.md
 docs/RESEARCH_ANALYSIS.md
+docs/V2.1.0_*.md
+docs/CODE_REVIEW_*.md
 
 # Deployment bundles
 *-bundle.zip
