docs: Add content-uri-task to Info.plist and document iOS Simulator limitations

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -11,6 +11,7 @@
 		<string>network-task</string>
 		<string>exact-reminder</string>
 		<string>demo-task</string>
+		<string>content-uri-task</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
