fix: Fix iOS simulator detection and improve chain executor for iOS
iOS simulator detection:
- Bridge Swift #if targetEnvironment(simulator) to Kotlin via setenv/getenv
- NativeTaskScheduler reads KMP_IS_SIMULATOR env var set by AppDelegate before Koin init
- Simulator fallback executes single tasks and chains directly in-process
- Register all 25 demo task IDs in Info.plist for BGTaskScheduler

Chain executor improvements (kmpworker):
- Add ChainProgress data class for tracking chain lifecycle states
- Improve AppendOnlyQueue with atomic enqueue and thread-safe size reporting
- Batch chain execution with graceful timeout and progress persistence
- Add IosFileStorage robustness for concurrent chain queue access
- Add 212-line ChainProgressTest covering all lifecycle transitions

Demo app:
- Wire SingleTaskExecutor and ChainExecutor into IOSModule via Koin
- Tune DemoScenariosScreen delay values and worker mappings
- Minor TaskBuilderScreen and DashboardScreen polish

Docs:
- Update CHANGELOG, README, ARCHITECTURE, ROADMAP for v2.2.1
- Remove stale BUILD_DEPENDENCIES_SECURITY.md and IOS_SIMULATOR_LIMITATIONS.md

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ gpg-revocation-cert.asc
 DEPLOYMENT.md
 DEPLOYMENT_GUIDE.md
 
+# Internal working docs (not shipped with the library)
+internal-docs/
+
 # Internal documentation (notes for development only)
 FIXES_SUMMARY.md
 RESEARCH.md
