feat: Add iOS support for built-in workers
Add full iOS support for built-in workers and integrate them into the demo app.

Changes:
- Add built-in worker task IDs to Info.plist BGTaskSchedulerPermittedIdentifiers
- Update NativeTaskScheduler to include built-in worker task IDs in permitted list
- Integrate BuiltinWorkerRegistry into IosWorkerFactory with WorkerAdapter
- Add iOS-specific setup section to BUILTIN_WORKERS_GUIDE.md
- Remove internal documentation files (roadmaps, analysis docs)

Built-in workers now working on iOS:
- HttpRequestWorker: Generic HTTP requests (tested, working)
- HttpSyncWorker: JSON synchronization (tested, working)
- HttpDownloadWorker: File downloads
- HttpUploadWorker: File uploads
- FileCompressionWorker: ZIP compression

Demo app integration verified on iOS simulator with all workers successfully recognized and executed.

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -29,6 +29,11 @@
 		<string>demo-heavy</string>
 		<string>demo-batch-upload</string>
 		<string>demo-image-proc</string>
+		<string>demo-builtin-httprequest</string>
+		<string>demo-builtin-httpsync</string>
+		<string>demo-builtin-httpdownload</string>
+		<string>demo-builtin-httpupload</string>
+		<string>demo-builtin-filecompression</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
